--- a/webapp/templates/webapp/index.html
+++ b/webapp/templates/webapp/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-    <!-- <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'> -->
-    <title>INDEXES</title>
-    <!-- <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script> -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
+    <title>NOTEPAD IDS</title>
 </head>
+
 <body>
-    INDEX <br>
-    
-    {% for columns in dataTestRun %}
-        <ul>
-            <a href="/webapp/logs/{{columns.id}}">{{columns.id}}</a>
+    <br>
+    <div class="container w-50">
+        <ul class="list-group">
+            <li class="list-group-item active text-center font-weight-bold">Notepad ids</li>
+            {% for columns in dataTestRun %}
+                <li class="list-group-item">{{ forloop.counter }}. <a href="/webapp/logs/{{columns.id}}">{{columns.id}}</a></li>
+            {% endfor %}
         </ul>
-    {% endfor %}
+    </div>
 </body>
 </html>
