--- a/webapp/templates/webapp/notepadId.html
+++ b/webapp/templates/webapp/notepadId.html
@@ -11,6 +11,7 @@
                 <ul class="list-group">
                     <li class="list-group-item active text-center font-weight-bold">Notepad ids</li>
                     {% for columns in dataTestRun %}
+                                <!-- /webapp/config-id/{{notepad_config_id}}/{{columns.id}} (mereg) "{% url 'notepadDetails' columns.id %}" (nu merge)-->
                         <li class="list-group-item">{{ forloop.counter }}. <a href="/webapp/config-id/{{notepad_config_id}}/{{columns.id}}">{{columns.id}}</a></li>
                     {% endfor %}
                 </ul>
