--- a/webapp/templates/webapp/notepadConfigId copy.html
+++ b/webapp/templates/webapp/notepadConfigId copy.html
@@ -11,8 +11,8 @@
             <ul class="list-group">
                 <li class="list-group-item active text-center font-weight-bold">Config ids</li>
                 {% for columns in dataTestLine %}
-                    <!--"{{columns.id}}", -->
-                    <li class="list-group-item"> {{forloop.counter}}. <a href="{% url 'id_notepad' columns.id %}">{{columns.id}}</a></li>
+                    <!-- href="{{columns.id}} (merge) {% url 'id_notepad' %} (nu merge) -->
+                    <li class="list-group-item">{{ forloop.counter }}. <a href="{{columns.id}}">{{columns.id}}</a></li>
                     <!-- sa fac un Add to favorites href -->
                 {% endfor %}
             </ul>
