--- a/webapp/templates/webapp/notepadId copy.html
+++ b/webapp/templates/webapp/notepadId copy.html
@@ -11,8 +11,8 @@
                 <ul class="list-group">
                     <li class="list-group-item active text-center font-weight-bold">Notepad ids</li>
                     {% for columns in dataTestRun %}
-                        <!-- "/webapp/config-id/{{notepad_config_id}}/{{columns.id}}", -->
-                        <li class="list-group-item">{{ forloop.counter }}. <a href="{% url 'notepad_details' notepad_config_id columns.id%}">{{columns.id}}</a></li>
+                        <!-- /webapp/config-id/{{notepad_config_id}}/{{columns.id}} (mereg) "{% url 'notepadDetails' columns.id %}" (nu merge) -->
+                        <li class="list-group-item">{{ forloop.counter }}. <a href="/webapp/config-id/{{notepad_config_id}}/{{columns.id}}">{{columns.id}}</a></li>
                     {% endfor %}
                 </ul>
             </div>
