--- a/webapp/templates/webapp/register copy.html
+++ b/webapp/templates/webapp/register copy.html
@@ -1,9 +1,7 @@
-{% extends 'webapp/base.html' %}
-
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Login</title>
+        <title>Register</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -63,50 +61,64 @@
         </style>
     </head>
 <body>
-    {% block content %}
-        <div class="container h-100">
-            <div class="d-flex justify-content-center h-100">
-                <div class="user_card">
+	<div class="container h-100">
+		<div class="d-flex justify-content-center h-100">
+			<div class="user_card">
+				<div class="d-flex justify-content-center">
+					<h3 id="form-title">REGISTER ACCOUNT</h3>
+				</div>
+				<div class="d-flex justify-content-center form_container">
+					<form method="POST" action="">
+						{% csrf_token %}
+                        
+                        username:
+						<div class="input-group mb-3">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-user"></i></span>
+							</div>
+							{{form.username}}
+						</div>
 
-                    <div class="d-flex justify-content-center">
-                        <h3 id="form-title">LOGIN</h3>
-                    </div>
+                        email:
+						<div class="input-group mb-2">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+							</div>
+							{{form.email}}
+						</div>
 
-                    <div class="d-flex justify-content-center form_container">
-                        <form method="POST" action="">
-                            {% csrf_token %}
-                            <div class="input-group mb-3">
-                                <div class="input-group-append">
-                                    <span class="input-group-text"><i class="fas fa-user"></i></span> <!-- username icon-->
-                                </div>
+                        password:
+						<div class="input-group mb-2">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-key"></i></span>
+							</div>
+							{{form.password1}}
+						</div>
 
-                                <input type="text" name="username" placeholder="Username..." class="form-control">
-                            </div>
+                        confirm password:
+						<div class="input-group mb-2">
+							<div class="input-group-append">
+								<span class="input-group-text"><i class="fas fa-key"></i></span>
+							</div>
+							{{form.password2}}
+						</div>
 
-                            <div class="input-group mb-2">
-                                <div class="input-group-append">
-                                    <span class="input-group-text"><i class="fas fa-key"></i></span> <!-- password icon-->
-                                </div>
 
-                                    <input type="password" name="password" placeholder="Password..." class="form-control" >
-                            </div>
+				   		<div class="d-flex justify-content-center mt-3 login_container">
+				 			<input class="btn login_btn" type="submit" value="Register Account">
+				   		</div>
+					</form>
+				</div>
 
-                                <div class="d-flex justify-content-center mt-3 login_container">
-                                    <input class="btn login_btn" type="submit" value="Login">
-                                </div>
-                        </form>
-                    </div>		
-            
-                    <div class="mt-4">
-                        <div class="d-flex justify-content-center links">
-                            Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
-                        </div>
-                
+                <div class="mt-4">
+                    <div class="d-flex justify-content-center links">
+                        Already have an account? <a href="{% url 'loginUser' %}" class="ml-2">Log in</a>
                     </div>
                 </div>
-            </div>
-        </div>
-    {% endblock %}
-</body>
 
+				{{form.errors}}
+			</div>
+		</div>
+	</div>
+</body>
 </html>
