--- a/webapp/templates/webapp/userProfile.html
+++ b/webapp/templates/webapp/userProfile.html
@@ -7,7 +7,11 @@
     </head>
     <body>
         {% block content %}
-            user profile
+            {{userName}}'s profile page
+            <br>
+            - sa adaug notepad details (de unde poate alege ce sa puna la favorite)
+            <br>
+            - sa adaug notepad favorites
         {% endblock %}
     </body>
 </html>
