--- a/webapp/templates/webapp/userProfile.html
+++ b/webapp/templates/webapp/userProfile.html
@@ -7,11 +7,22 @@
     </head>
     <body>
         {% block content %}
-            {{userName}}'s profile page
+            {{userInfo}}
             <br>
-            - sa adaug notepad details (de unde poate alege ce sa puna la favorite)
+            {{userInfo.username}} <!-- NU MERGE, DE CE?-->
             <br>
-            - sa adaug notepad favorites
+            {% for obj in userInfo %} 
+                {{obj.username}}'s profile page
+            {% endfor %}
+            <!-- why not like this: {{userInfo.username}}?
+            do I really need to make a for?
+            -->
+            <br>
+            <span><a href="{% url 'logout' %}">Logout</a></span>
+            <br>
+            <a class="navbar-brand" href="{% url 'notepad_config_id' %}">Notepad Details</a>
+            <br>
+            <a class="navbar-brand" href="{% url 'favorites' %}">Favorites</a>
         {% endblock %}
     </body>
 </html>
