--- a/webapp/templates/webapp/home.html
+++ b/webapp/templates/webapp/home.html
@@ -9,7 +9,7 @@
         {% block content %}
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <!-- "/webapp/config-id" == "config-id" == {% url 'notepad_config_id' %} (better)-->
-                <a class="navbar-brand" href="{% url 'notepad_config_id' %}">Notepad Details</a>
+                <a class="navbar-brand" href="{% url 'notepad_config_id' %}">Testlines</a>
 
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
