--- a/webapp/templates/webapp/TestLine.html
+++ b/webapp/templates/webapp/TestLine.html
@@ -3,13 +3,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>NOTEPAD CONFIG IDS</title>
+        <title>TESTLINE</title>
     </head>
     <body>
         {% block content %}
         <div class="container w-50">
             <ul class="list-group">
-                <li class="list-group-item active text-center font-weight-bold">Config ids</li>
+                <li class="list-group-item active text-center font-weight-bold">Testline ids</li>
                 {% for columns in dataTestLine %}
                     <li class="list-group-item"> {{forloop.counter}}. <a href="{% url 'id_notepad' columns.id %}">{{columns.id}}</a>
                         <br>
