--- a/webapp/templates/webapp/TestRun.html
+++ b/webapp/templates/webapp/TestRun.html
@@ -10,8 +10,7 @@
             <div class="container w-50">
                 <ul class="list-group">
                     <li class="list-group-item active text-center font-weight-bold">Notepad ids</li>
-                    {% for columns in dataTestRun %}
-                        <!-- "/webapp/config-id/{{notepad_config_id}}/{{columns.id}}", -->
+                    {% for columns in TestRun_filtered_data %}
                         <li class="list-group-item">{{ forloop.counter }}. <a href="{% url 'notepad_details' notepad_config_id columns.id%}">{{columns.id}}</a></li>
                     {% endfor %}
                 </ul>
