--- a/webapp/templates/webapp/userProfile.html
+++ b/webapp/templates/webapp/userProfile.html
@@ -11,7 +11,7 @@
             <br>
             <span><a href="{% url 'logout' %}">Logout</a></span>
             <br>
-            <a class="navbar-brand" href="{% url 'notepad_config_id' %}">Notepad Details</a>
+            <a class="navbar-brand" href="{% url 'Testline' %}">Testlines</a>
             <br>
             <a class="navbar-brand" href="{% url 'favorites' %}">Favorites</a>
         {% endblock %}
