--- a/webapp/templates/webapp/TestLine.html
+++ b/webapp/templates/webapp/TestLine.html
@@ -11,10 +11,10 @@
             <ul class="list-group">
                 <li class="list-group-item active text-center font-weight-bold">Testline ids</li>
                 {% for columns in dataTestLine %}
-                    <li class="list-group-item"> {{ forloop.counter }}. <a href="{% url 'id_notepad' columns.id %}">{{ columns.id }}</a>
+                    <li class="list-group-item"> {{ forloop.counter }}. <a href="{% url 'Testrun' columns.id %}">{{ columns.id }}</a>
                         <br>
                         {% if userName != "AnonymousUser" %}
-                            <a href="{% url 'add_to_favorites' columns.id %}">Add to favorites</a>
+                            <a href="{% url 'add_favorites_TestLine' columns.id %}">Add to favorites</a>
                         {% endif %}
                     </li>
                 {% endfor %}
