--- a/webapp/templates/webapp/home.html
+++ b/webapp/templates/webapp/home.html
@@ -8,8 +8,8 @@
     <body>
         {% block content %}
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <!-- "/webapp/config-id" == "config-id" == {% url 'notepad_config_id' %} (better)-->
-                <a class="navbar-brand" href="{% url 'notepad_config_id' %}">Testlines</a>
+                <!-- "/webapp/config-id" == "config-id" == {% url 'Testline' %} -->
+                <a class="navbar-brand" href="{% url 'Testline' %}">Testlines</a>
 
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
