--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -1,8 +1,22 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+        <!--
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400,600|Open+Sans:400,600,700">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp">
+        
+        <link rel="stylesheet" type="text/css" href="{% static 'webapp/css/preloader.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'webapp/css/style.css' %}">
+    
+        <img src="{% static 'webapp/images/favicon.png' %}">
+        <img src="{% static 'webapp/images/logo.png' %}">
+
+        <script src="{% static 'webapp/jvs/loadpage.js' %}"></script>
+        -->
     </head>
     <body>
         {% if messages %}
