--- a/webapp/static/webapp/css/style.css
+++ b/webapp/static/webapp/css/style.css
@@ -1,23 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap");
 
-/* ---- ROOT VARIABLES ---- */
+/* ---- ROOT WHITE THEME VARIABLES ---- */
 
 :root {
-  --blue: #007bff;
-  --indigo: #6610f2;
-  --purple: #6f42c1;
-  --pink: #e83e8c;
-  --red: #dc3545;
-  --orange: #fd7e14;
-  --yellow: #ffc107;
-  --green: #28a745;
-  --teal: #20c997;
-  --cyan: #17a2b8;
-  --white: #fff;
-  --gray: #6c757d;
   --gray-dark: #343a40;
-  --dark: #363949;
-  --white: #fff;
+  --color-dark: #363949;
+  --color-white: #fff;
   --dark-info: #7d8da1;
   --color-light: rgba(132, 139, 200, 0.18);
   --primary: #7380ec;
@@ -25,8 +13,27 @@
   --color-background: #f6f6f9;
   --color-primary:#7380ec;
   --color-primary-variant:#111e88;
-  --border-radius-1: 0.4rem; 
+
+  --border-radius-1: 0.4rem;
+  --border-radius-2: 0.8rem; 
+  --border-radius-3: 1.2rem;
+  --card-padding: 1.8rem;
+  --card-border-radius: 2rem;
+  --padding-1: 1.2rem;  
+
   --box-shadow: 0 2rem 3rem var(--color-light);
+  }
+
+
+/* ---- DARK THEME VARIABLES ---- */
+
+.dark-theme-variables {
+  --color-background: #181a1e;
+  --color-white: #202528;
+  --color-dark: #edeffd;
+  --color-dark-variant: #a3bdcc;
+  --color-light: rgba(0, 0, 0, 0.4);
+  --box-shadow: 0 2rem 3rem var(--color-light); 
 }
 
 /* ---- CSS VARIABLES AND GENERAL STYLES ---- */
@@ -46,14 +53,17 @@ html{
   font-size: 14px;
 }
 
+/* ---- BODY ---- */
+
 body{
   width: 100vw;
   height: 100vh;
   font-family: Poppins, sans-serif;
   font-size: 0.88rem;
-  background: #f6f6f9;
+  background: var(--color-background);
   user-select: none;
   overflow-x: hidden;
+  color: var(--color-dark);
 }
 
 .container{
@@ -66,7 +76,7 @@ body{
 }
 
 a{
-  color: #363949;
+  color: var(--color-dark);
 }
 
 img{
@@ -77,14 +87,17 @@ img{
 h1{
   font-weight: 800;
   font-size: 1.8rem;
+  color: var(--color-dark);
 }
 
 h2{
   font-size: 1.4rem;
+  color: var(--color-dark);
 }
 
 h3{
   font-size: 0.87rem;
+  color: var(--color-dark);
 }
 
 h4{
@@ -96,23 +109,30 @@ h5{
 }
 
 p{
-  color: #677483;
+  color: var(--color-dark-variant);
 }
 
 b{
-  color: #363949;
+  color: var(--color-dark);
+}
+
+.profile-photo{
+  width: 2.8rem;
+  height: 2.8rem;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .primary{
-  color: #111e88;
+  color: var(--color-primary);
 }
 
 .danger{
-  color: #111e88;
+  color: var(--color-dark);
 }
 
 .text-muted {
-  color: #7d8da1
+  color: var(--color-dark-variant);
 }
 
 
@@ -124,7 +144,7 @@ aside {
 }
 
 aside .top{
-  background: white;
+    /* background: var(--color-white); */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -145,10 +165,10 @@ aside .logo{
   gap: 0.2rem;
 }
 
-/* ---- SIDEBAR ---- */
+/* ---- ASIDE SIDEBAR ---- */
 
 aside .sidebar{
-  background: white;
+  /* background: var(--color-white);  */
   display: flex;
   flex-direction: column;
   height: 86vh;
@@ -162,7 +182,7 @@ aside h3{
 
 aside .sidebar a{
   display: flex;
-  color: #7d8da1;
+  color: var(--dark-info);
   margin-left: 2rem;
   gap: 1rem;
   align-items: center;
@@ -173,9 +193,10 @@ aside .sidebar a{
 
 aside .sidebar a span {
   font-size: 1.6rem;
+  transition: all 300ms ease;
 }
 
-/* ---- SIDEBAR LOGOUT ---- */
+/* ---- SIDEBAR LOGOUT/DASHBOARD ---- */
 
 aside .sidebar a:last-child {
   position: absolute;
@@ -184,25 +205,25 @@ aside .sidebar a:last-child {
 }
 
 aside .sidebar a.active{
-  background: rgba(132, 139, 200, 0.18);
-  color: #111e88;
+  background: var(--color-light);
+  color: var(--primary);
   margin-left: 0;
 }
 
 aside .sidebar a.active:before{
-  content: "";
+  content: '';
   width: 6px;
   height: 100%;
-  background: #111e88;
+  background: var(--primary);
 }
 
  aside .sidebar a.active span{
-  color: #111e88;
-  margin-left: calc(1rem - 3px);
+  color: var(--primary);
+  margin-left: calc(1rem - 6px);
  }
 
  aside .sidebar a:hover {
-  color: #111e88;
+  color: var(--primary);
  }
 
   aside .sidebar a:hover span{
@@ -217,11 +238,52 @@ main{
 
 main .date{
   display: inline-block;
- /* background: rgba(132, 139, 200, 0.18);*/
-  border-radius: 0.4rem;
-  margin-top: 0.1rem;
+  background: var(--color-light);
+  border-radius: var(--border-radius-1);
+  margin-top: 1rem;
   padding: 0.1rem 1rem;
 }
+
+ /* ---- MAIN ANALYTICS ----*/
+
+main .insights{
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 1.6rem;
+}
+
+main .insights > div {
+  background: var(--color-white);
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  margin-top: 1rem;
+  box-shadow: var(--box-shadow);
+  /*transition: all 300 ms ease;-*/
+}
+
+main .insights > div:hover{
+  box-shadow: none;
+}
+
+main .insights > div span{
+  background: var(--primary);
+  padding: 0.5rem;
+  border-radius: 50%;
+  color: var(--color-white);
+  font-size: 2rem;
+}
+
+main .insights > div .middle{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+main .insights h3{
+  margin: 1rem 0 0.6rem;
+  font-size: 1rem;
+}
+
 
  /* ---- RIGHT BAR ---- */
 
@@ -241,14 +303,14 @@ main .date{
  }
 
  .right .theme-toggler{
-  background: rgba(132, 139, 200, 0.18);
+  background: var(--color-light);
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 1.6rem;
   width: 4.2rem;
   cursor: pointer;
-  border-radius: 0.4rem;
+  border-radius: var(--border-radius-1);
  }
 
  .right .theme-toggler span{
@@ -261,37 +323,86 @@ main .date{
  }
 
   .right .theme-toggler span.active{
-    background: #111e88;
+    background: var(--primary);
     color: white;
-    border-radius: 0.4rem;
+    border-radius: var(--border-radius-1);
+ }
+
+ .right .top .profile{
+  display: flex;
+  gap: 2rem;
+  text-align: right;
  }
 
 
- /* ---- TESTCASe ---- */
+ /* ---- tabel testcase nokia ---- */
 
 
-main .test-case{
+main .testcase-nokia{
   margin-top: 2rem;
 }
 
-main .test-case h2{
+main .testcase-nokia h2{
   margin-bottom: 0.8rem;
 
 }
 
-main .test-case table{
-  background: white;
+main .testcase-nokia table{
+  background: var(--color-white);
   width: 100%;
-  border-radius: 2rem;
-  padding: 1.8rem;
+  border-radius: var(--card-border-radius);
+  padding: var(--card-padding);
   text-align: center;
-  box-shadow: 0 2rem 3rem rgba(132, 139, 200, 0.18);
+  box-shadow: var(--box-shadow);
   transition: all 300ms ease;
 }
 
-main .text-case table:hover{
+main .testcase-nokia tbody td{
+  height: 2.8rem;
+  border-bottom: 1px solid var(--color-light);
+  color: var(--color-dark-variant);
+}
+
+main .testcase-nokia tbody tr:last-child td{
+  border: none;
+}
+
+main .testcase-nokia table:hover{
   box-shadow: none;
 }
+
+ /* ---- favorites testcases ---- */
+
+.right .favorite{
+  margin-top: 1rem;
+}
+
+.right .favorite h2{
+  margin-bottom: 0.8rem;
+}
+
+.right .favorite .update-favorite{
+  background: var(--color-white);
+  padding: var(--card-padding);
+  border-radius: var(--card-border-radius);
+  box-shadow: var(--box-shadow);
+  transition: all 300ms ease;
+}
+
+.right .favorite .update-favorite:hover{
+  box-shadow: none;
+}
+
+.right .favorite .update-favorite .favorites{
+  
+  grid-template-columns: 2.6rem auto;
+  gap: 1rem;
+  margin-bottom: 1rem;
+
+}
+
+
+ /* ---- login/register ---- */
 
 main .login-user{
   margin-top: 2rem;
@@ -346,13 +457,213 @@ main .label{
 
  /* ---- LOGIN ---- */
 
- /* ---- MEDIA QUERIES ---- 
+ /* ---- MEDIA QUERIES Big/Small Laptops ----  */ 
 
  @media screen and (max-width: 1200px){
     .container{
       width: 94%
       grid-template-columns: 7rem auto 23rem;
     }
+
+  aside .logo h2{
+  	display: none;
+  }
+
+  aside .sidebar h3{
+  	display: none;
+  }
+
+  aside .sidebar a{
+  	width: 5.6rem;
+  }
+
+  aside .sidebar a:last-child{
+  	position: relative;
+  	margin-top: 1.8rem;
+  }
+
+  main .insights{
+    grid-template-columns: 1fr;
+    gap: 0;
+  }
+
+  main .testcase-nokia{
+    width: 94%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 2rem 0 0 8.8rem;
+  }
+
+  main .testcase-nokia{
+    width: 83vw;
+
+  }
+
+  main table tbody tr td:last-child, 
+  main table tbody tr td:first-child{
+      display: none;
+  } 
+
+  main table thead tr th:last-child, 
+  main table thead tr th:first-child{
+      display: none;
+  }
+
+
+ /* ---- MEDIA QUERIES Smarthpone ---- */
+
+
+@media screen and (max-width: 768px) 
+{
+    .container{
+      width: 100%
+      grid-template-columns: 1fr;
+    }
+
+    aside {
+    	position: fixed;
+    	left: -100%;
+    	background: var(--color-white);
+    	width: 18rem;
+    	z-index: 3;
+    	box-shadow: 1rem 3rem 4rem var(--color-light);
+    	height: 100vh
+    	padding-right: var(--card-padding);
+      display: none;
+      animation: showMenu 400ms ease forwards;
+    }
+
+    @keyframes showMenu{
+      to{
+        left: 0;
+      }
+    }
+
+    aside .logo{
+      margin-left: 1rem;
+    }
+
+    aside .logo h2{
+      display: inline;
+    }
+
+    aside .sidebabr h3{
+      display: inline;
+    }
+
+    aside .sidebar a{
+      width: 100%;
+      height: 3.4rem;
+    }
+
+    aside .sidebar a:last-child{
+      position: absolute;
+      bottom: 5rem;
+    }
+
+    aside .close{
+      display: inline-block;
+      cursor: pointer;
+    }
+
+    main {
+      margin-top: 8rem;
+      padding: 0 1rem;
+    }
+
+    main .testcase-nokia{
+      position: relative;
+      margin: 3rem 0 0 0;
+      width: 100%;
+    }
+
+    main .testcase-nokia table{
+      width: 100%;
+      margin: 0;
+    }
+
+    .right {
+      width: 94%
+      margin: 0 auto 4rem;
+    }
+
+    .right .top{
+      position: fixed;
+      top: 0;
+      left: 0;
+      align-items: center;
+      padding: 0 0.8rem;
+      height: 4.6rem;
+      background: var(--color-white);
+      width: 100%;
+      margin: 0;
+      z-index: 2;
+      box-shadow: 0 1rem 1rem var(--color-light);
+    }
+
+    .right .top .theme-toggler{
+      width: 4.5rem;
+      position: absolute;
+      left: 50%
+    }
+
+    .right .top button {
+      display: inline-block;
+      background: transparent;
+      cursor: pointer;
+      color: var(--color-dark);
+      position: absolute;
+      left: 1rem;
+    }
+
+    .right .top button span{
+      font-size: 2rem;
+    }
+
  }
 
- */
+
+
+ main #container-404{
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  right: 10%;
+  border-radius: 10px;
+  bottom: 10%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+main #container-404 .content-404{
+  max-width: 600px;
+  text-align: center;
+
+}
+
+main #container-404 .content-404 h2{
+  font-size: 18vw;
+  color: var(--color-dark);
+  line-height: 1em;
+
+}
+
+main #container-404 .content-404 h4{
+ position: relative;
+ font-size: 1.5em;
+ margin-bottom: 20px;
+ color: #fff;
+ background: black;
+ font-weight: 300;
+ padding: 10px 20px;
+ display: inline-block;
+
+}
+
+main #container-404 .content-404 p{
+ color: var(--color-dark);
+ font-size: 1.2em;
+ 
+}
