--- a/webapp/templates/webapp/TestLine.html
+++ b/webapp/templates/webapp/TestLine.html
@@ -1,25 +1,98 @@
 {% extends 'webapp/base.html' %}
+{% load static %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
     <head>
-        <title>TESTLINE</title>
     </head>
+
     <body>
         {% block content %}
-        <div class="container w-50">
-            <ul class="list-group">
-                <li class="list-group-item active text-center font-weight-bold">Testline ids</li>
-                {% for columns in dataTestLine %}
-                    <li class="list-group-item"> {{ forloop.counter }}. <a href="{% url 'Testrun' columns.id %}">{{ columns.id }}</a>
-                        <br>
-                        {% if userName != "AnonymousUser" %}
-                            <a href="{% url 'add_favorites_TestLine' columns.id %}">Add to favorites</a>
-                        {% endif %}
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
+            <div class="container">
+                <!-- SIDEBAR FOR VERTICAL NAVBAR-->
+                <aside>
+                    <div class="top">
+                        <div class="logo">
+                            <img src="{% static 'webapp/images/logo.png' %}">
+                            <h2>Statistic<span class="danger">Test</span></h2>
+                        </div>
+                        <div class="close" id="close-btn">
+                            <span class="material-icons-sharp">close</span>
+                        </div>
+                    </div>
+
+                    <!-- ELEMENTS NAVBAR-->
+                    {% if request.user.is_anonymous == True %}
+                        <div class="sidebar">
+                            <a href="{% url 'Testline' %}">
+                                <span class="material-icons-sharp">assessment</span>
+                                <h3>Testlines</h3>
+                            </a>
+                            <a href="{% url 'register' %}">
+                                <span class="material-icons-sharp">how_to_reg</span>
+                                <h3>Register</h3>
+                            </a>
+                            <a href="{% url 'login_user' %}">
+                                <span class="material-icons-sharp">account_circle</span>
+                                <h3>Login</h3>
+                            </a>
+                        </div>
+                    {% else %}
+                        <a href="{% url 'Testline' %}">
+                            <span class="material-icons-sharp">assessment</span>
+                            <h3>Testlines</h3>
+                        </a>
+                        <a href="{% url 'favorites' %}">
+                            <span class="material-icons-sharp">how_to_reg</span>
+                            <h3>Favorites Testlines</h3>
+                        </a>
+                        <a href="{% url 'logout' %}">
+                            <span class="material-icons-sharp">account_circle</span>
+                            <h3>Logout</h3>
+                        </a>
+                    {% endif %}
+                </aside>
+
+                <main>
+                    <div class="date">
+                        <p>This page loaded in <span id="loadtime"></span></p>.
+                    </div>
+
+                    <div class="testcase-nokia">
+                        <div class="container w-50">
+                            <ul class="list-group">
+                                <li class="list-group-item active text-center font-weight-bold">Testline ids</li>
+                                {% for columns in dataTestLine %}
+                                    <li class="list-group-item"> {{ forloop.counter }}. <a href="{% url 'Testrun' columns.id %}">{{ columns.id }}</a>
+                                        <br>
+                                        {% if userName != "AnonymousUser" %}
+                                            <a href="{% url 'add_favorites_TestLine' columns.id %}">Add to favorites</a>
+                                        {% endif %}
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </div>
+                    </div>
+                </main>
+
+                <div class="right">
+                    <div class="top">
+                        <button id="menu-btn">
+                            <span class="material-icons-sharp">menu</span>
+                        </button>
+                        <div class="theme-toggler">
+                        <span class="material-icons-sharp active">light_mode</span> 
+                            <span class="material-icons-sharp">dark_mode</span> 
+                        </div>
+                        <div class="profile">
+                            <div class="info">
+                                <p> Hey, <b> {{ request.user }} </b></p>
+                            </div>                 
+                        </div>
+                    </div>
+                </div>
+            </div>
         {% endblock %}
     </body>
 </html>
