--- a/webapp/templates/webapp/home.html
+++ b/webapp/templates/webapp/home.html
@@ -1,25 +1,67 @@
 {% extends 'webapp/base.html' %}
+{% load static %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-    <head>
-        <title>Homepage</title>
-    </head>
-    <body>
-        {% block content %}
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <!-- "/webapp/config-id" == "config-id" == {% url 'Testline' %} -->
-                <a class="navbar-brand" href="{% url 'Testline' %}">Testlines</a>
 
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="register">Register</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="login">Login</a>
-                    </li>
-                </ul>
-            </nav>
-        {% endblock %}
-    </body>
+<head>
+</head>
+
+<body>
+    {% block content %}
+        <div class="container">
+            <!-- SIDEBAR FOR VERTICAL NAVBAR-->
+            <aside>
+                <div class="top">
+                    <div class="logo">
+                        <img src="{% static 'webapp/images/logo.png' %}">
+                        <h2>Statistic<span class="danger">Test</span></h2>
+                    </div>
+                    <div class="close" id="close-btn">
+                        <span class="material-icons-sharp">close</span>
+                    </div>
+                </div>
+                <!-- ELEMENTS NAVBAR-->
+                <div class="sidebar">
+                    <a href="{% url 'Testline' %}">
+                        <span class="material-icons-sharp">assessment</span>
+                        <h3>Testlines</h3>
+                    </a>
+                    <a href="{% url 'register' %}">
+                        <span class="material-icons-sharp">how_to_reg</span>
+                        <h3>Register</h3>
+                    </a>
+                    <a href="{% url 'login_user' %}">
+                        <span class="material-icons-sharp">account_circle</span>
+                        <h3>Login</h3>
+                    </a>
+                    <!-- MEMBERS LOGIN -->
+                </div>
+            </aside>
+            <main>
+                <div class="date">
+                    <p>Loaded in <span id="loadtime"></span></p>
+                </div>
+            </main>
+
+            <div class="right">
+                <div class="top">
+                    <button id="menu-btn">
+                        <span class="material-icons-sharp">menu</span>
+                    </button>
+                    <div class="theme-toggler">
+                    <span class="material-icons-sharp active">light_mode</span> 
+                        <span class="material-icons-sharp">dark_mode</span> 
+                    </div>
+                    <div class="profile">
+                        <div class="info">
+                            <p> Hey, <b> {{ request.user }} </b></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    {% endblock %}
+</body>
 </html>
