--- a/webapp/templates/webapp/register.html
+++ b/webapp/templates/webapp/register.html
@@ -1,70 +1,137 @@
 {% extends 'webapp/base.html' %}
+{% load static %}
 
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
+
     <head>
-        <title>Register</title>
     </head>
+
     <body>
         {% block content %}
-            <div class="container h-100">
-                <div class="d-flex justify-content-center h-100">
-                    <div class="user_card">
+            <div class="container">
+                
+                <!-- SIDEBAR FOR VERTICAL NAVBAR-->
+                <aside>
+                    <div class="top">
+                        <div class="logo">
+                            <img src="{% static 'webapp/images/logo.png' %}">
+                            <h2>Statistic<span class="danger">Test</span></h2>
+                        </div>
+                        <div class="close" id="close-btn">
+                            <span class="material-icons-sharp">close</span>
+                        </div>
+                    </div>
+                    <!-- ELEMENTS NAVBAR-->
+                    <div class="sidebar">
+                        <a href="{% url 'Testline' %}">
+                            <span class="material-icons-sharp">assessment</span>
+                            <h3>Testlines</h3>
+                        </a>
+                        <a href="{% url 'register' %}">
+                            <span class="material-icons-sharp">how_to_reg</span>
+                            <h3>Register</h3>
+                        </a>
+                        <a href="{% url 'login_user' %}">
+                            <span class="material-icons-sharp">account_circle</span>
+                            <h3>Login</h3>
+                        </a>
+                        <!-- MEMBERS LOGIN -->
+                    </div>
+                </aside>
+                <main>
+                    <h1>SignUp</h1>
 
-                        <div class="d-flex justify-content-center">
-                            <h3 id="form-title">REGISTER ACCOUNT</h3>
+                    <div class="date">
+                        <p>This page loaded in <span id="loadtime"></span></p>.
+                    </div>
+
+                    <div class="login-user">
+                        <span class="material-icons-sharp">how_to_reg</span>
+                        <h2>Create an account</h2>
+                        <div class="account-dialog">
+                            <div class="card-header bg-primary text-white"> Please sign in </div>
                         </div>
-                        
-                        <div class="d-flex justify-content-center form_container">
-                            <form method="POST" action="">
-                                {% csrf_token %}
-                                
-                                username:
-                                <div class="input-group mb-3">
-                                    <div class="input-group-append">
-                                        <span class="input-group-text"><i class="fas fa-user"></i></span>
+
+                        <div class="container h-100">
+                            <div class="d-flex justify-content-center h-100">
+                                <div class="user_card">
+            
+                                    <div class="d-flex justify-content-center">
+                                        <h3 id="form-title">REGISTER ACCOUNT</h3>
                                     </div>
-                                    {{form.username}}
-                                </div>
-        
-                                email:
-                                <div class="input-group mb-2">
-                                    <div class="input-group-append">
-                                        <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+                                    
+                                    <div class="d-flex justify-content-center form_container">
+                                        <form method="POST" action="">
+                                            {% csrf_token %}
+                                            
+                                            username:
+                                            <div class="input-group mb-3">
+                                                <div class="input-group-append">
+                                                    <span class="input-group-text"><i class="fas fa-user"></i></span>
+                                                </div>
+                                                {{form.username}}
+                                            </div>
+                    
+                                            email:
+                                            <div class="input-group mb-2">
+                                                <div class="input-group-append">
+                                                    <span class="input-group-text"><i class="fas fa-envelope-square"></i></span>
+                                                </div>
+                                                {{form.email}}
+                                            </div>
+                    
+                                            password:
+                                            <div class="input-group mb-2">
+                                                <div class="input-group-append">
+                                                    <span class="input-group-text"><i class="fas fa-key"></i></span>
+                                                </div>
+                                                {{form.password1}}
+                                            </div>
+                    
+                                            confirm password:
+                                            <div class="input-group mb-2">
+                                                <div class="input-group-append">
+                                                    <span class="input-group-text"><i class="fas fa-key"></i></span>
+                                                </div>
+                                                {{form.password2}}
+                                            </div>
+                    
+                    
+                                            <div class="d-flex justify-content-center mt-3 login_container">
+                                                <input class="btn login_btn" type="submit" value="Register Account">
+                                            </div>
+                                        </form>
                                     </div>
-                                    {{form.email}}
-                                </div>
-        
-                                password:
-                                <div class="input-group mb-2">
-                                    <div class="input-group-append">
-                                        <span class="input-group-text"><i class="fas fa-key"></i></span>
+                    
+                                    <div class="mt-4">
+                                        <div class="d-flex justify-content-center links">
+                                            Already have an account? <a href="{% url 'login_user' %}" class="ml-2">Log in</a>
+                                        </div>
                                     </div>
-                                    {{form.password1}}
+                    
+                                    {{form.errors}}
                                 </div>
-        
-                                confirm password:
-                                <div class="input-group mb-2">
-                                    <div class="input-group-append">
-                                        <span class="input-group-text"><i class="fas fa-key"></i></span>
-                                    </div>
-                                    {{form.password2}}
-                                </div>
-        
-        
-                                <div class="d-flex justify-content-center mt-3 login_container">
-                                    <input class="btn login_btn" type="submit" value="Register Account">
-                                </div>
-                            </form>
-                        </div>
-        
-                        <div class="mt-4">
-                            <div class="d-flex justify-content-center links">
-                                Already have an account? <a href="{% url 'login_user' %}" class="ml-2">Log in</a>
                             </div>
                         </div>
-        
-                        {{form.errors}}
+
+                    </div>
+                </main>
+
+                <div class="right">
+                    <div class="top">
+                        <button id="menu-btn">
+                            <span class="material-icons-sharp">menu</span>
+                        </button>
+                        <div class="theme-toggler">
+                        <span class="material-icons-sharp active">light_mode</span> 
+                            <span class="material-icons-sharp">dark_mode</span> 
+                        </div>
+                        <div class="profile">
+                            <div class="info">
+                                <p> Hey, <b> {{ request.user }} </b></p>
+                            <div>                  
+                        </div>
                     </div>
                 </div>
             </div>
