--- a/webapp/templates/webapp/userProfile.html
+++ b/webapp/templates/webapp/userProfile.html
@@ -1,19 +1,67 @@
 {% extends 'webapp/base.html' %}
+{% load static %}
 
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
-        <title>NOTEPAD CONFIG IDS</title>
     </head>
+
     <body>
         {% block content %}
-            {{ userInfo.username }}'s profile page
-            <br>
-            <span><a href="{% url 'logout' %}">Logout</a></span>
-            <br>
-            <a class="navbar-brand" href="{% url 'Testline' %}">Testlines</a>
-            <br>
-            <a class="navbar-brand" href="{% url 'favorites' %}">Favorites</a>
+            <div class="container">
+                <!-- SIDEBAR FOR VERTICAL NAVBAR-->
+                <aside>
+                    <div class="top">
+                        <div class="logo">
+                            <img src="{% static 'webapp/images/logo.png' %}">
+                            <h2>Statistic<span class="danger">Test</span></h2>
+                        </div>
+                        <div class="close" id="close-btn">
+                            <span class="material-icons-sharp">close</span>
+                        </div>
+                    </div>
+                    <!-- ELEMENTS NAVBAR-->
+                    <div class="sidebar">
+                        <a href="{% url 'Testline' %}">
+                            <span class="material-icons-sharp">assessment</span>
+                            <h3>Testlines</h3>
+                        </a>
+                        <a href="{% url 'favorites' %}">
+                            <span class="material-icons-sharp">how_to_reg</span>
+                            <h3>Favorites Testlines</h3>
+                        </a>
+                        <a href="{% url 'logout' %}">
+                            <span class="material-icons-sharp">account_circle</span>
+                            <h3>Logout</h3>
+                        </a>
+                    </div>
+                </aside>
+                <main>
+
+                    <div class="date">
+                        <p>This page loaded in <span id="loadtime"></span></p>.
+                    </div>
+
+                </main>
+
+                <div class="right">
+                    <div class="top">
+                        <button id="menu-btn">
+                            <span class="material-icons-sharp">menu</span>
+                        </button>
+                        <div class="theme-toggler">
+                        <span class="material-icons-sharp active">light_mode</span> 
+                            <span class="material-icons-sharp">dark_mode</span> 
+                        </div>
+                        <div class="profile">
+                            <div class="info">
+                                <p> Hey, <b> {{ request.user }} </b></p>
+                            </div>                 
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
         {% endblock %}
     </body>
 </html>
