--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
         
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:400,600|Open+Sans:400,600,700">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp">
         
-        <link rel="stylesheet" type="text/css" href="{% static 'webapp/css/preloader.css' %}">
+        <!-- <link rel="stylesheet" type="text/css" href="{% static 'webapp/css/preloader.css' %}"> -->
+
         <link rel="stylesheet" type="text/css" href="{% static 'webapp/css/style.css' %}">
     </head>
 
@@ -26,6 +26,6 @@
         {% endblock %}
     </body>
     
-    <script src="{% static 'webapp/jvs/loadpage.js' %}"></script>
-    <script src="{% static 'webapp/jvs/index.js' %}"></script>
+    <script src="{% static 'webapp/jvs/index.js' %}"></script> <!-- black/white -->
+    <script src="{% static 'webapp/jvs/loadpage.js' %}"></script> <!-- page loaded in ...-->
 </html>
