--- a/webapp/templates/webapp/base.html
+++ b/webapp/templates/webapp/base.html
@@ -15,6 +15,66 @@
 
     <body>
         <!-- sidebar -->
+        <aside>
+            <div class="top">
+                <div class="logo">
+                    <img src="{% static 'webapp/images/logo.png' %}">
+                    <h2>Statistic<span class="danger">Test</span></h2>
+                </div>
+                <div class="close" id="close-btn">
+                    <span class="material-icons-sharp">close</span>
+                </div>
+            </div>
+
+            <div class="sidebar">
+                <a href="{% url 'Testline' %}">
+                    <span class="material-icons-sharp">assessment</span>
+                    <h3>Testlines</h3>
+                </a>
+
+                {% if request.user.is_anonymous == True %}
+                        <a href="{% url 'register' %}">
+                            <span class="material-icons-sharp">how_to_reg</span>
+                            <h3>Register</h3>
+                        </a>
+
+                        <a href="{% url 'login_user' %}">
+                            <span class="material-icons-sharp">account_circle</span>
+                            <h3>Login</h3>
+                        </a>
+                {% else %}
+                    <a href="{% url 'favorites' %}">
+                        <span class="material-icons-sharp">how_to_reg</span>
+                        <h3>Favorites Testlines</h3>
+                    </a>
+                    
+                    <a href="{% url 'logout' %}">
+                        <span class="material-icons-sharp">account_circle</span>
+                        <h3>Logout</h3>
+                    </a>
+                {% endif %}
+            </div>
+        </aside>
+
+        <!-- dark/light -->
+        <div class="right">
+            <div class="top">
+                <button id="menu-btn">
+                    <span class="material-icons-sharp">menu</span>
+                </button>
+                <div class="theme-toggler">
+                <span class="material-icons-sharp active">light_mode</span> 
+                    <span class="material-icons-sharp">dark_mode</span> 
+                </div>
+                <div class="profile">
+                    <div class="info">
+                        <p> Hey, <b> {{ request.user }} </b></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- pop-up messages -->
         {% if messages %}
             {% for message in messages %}
                 <div class="alert alert-{{ message.tags }}">
