--- a/webapp/templates/webapp/home.html
+++ b/webapp/templates/webapp/home.html
@@ -13,8 +13,20 @@
                     <div class="date">
                         <p>Loaded in <span id="loadtime"></span></p>
                     </div>
+
+                    <div class="insights">
+                        <div class="analytics-user">
+                            <span class="material-icons-sharp">account_circle</span>
+                            <div class="middle">
+                                <div class="left">
+                                    <h3>Total accounts</h3>
+                                    <h1>{{ accounts }}</h1>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                 </main>
-                
             </div>
         {% endblock %}
     </body>
