--- a/webapp/static/webapp/css/style.css
+++ b/webapp/static/webapp/css/style.css
@@ -56,23 +56,13 @@ html{
 /* ---- BODY ---- */
 
 body{
-  width: 100vw;
-  height: 100vh;
+  display: flex;
   font-family: Poppins, sans-serif;
   font-size: 0.88rem;
   background: var(--color-background);
   user-select: none;
   overflow-x: hidden;
   color: var(--color-dark);
-}
-
-.container{
-  display: grid;
-  width: 96%;
-  margin: 0 auto;
- /* background: red; */
-  gap: 1.8rem;
-  grid-template-columns: 14rem auto 23rem;
 }
 
 a{
@@ -97,6 +87,10 @@ h2{
 
 h3{
   font-size: 0.87rem;
+  color: var(--color-dark);
+}
+
+li{
   color: var(--color-dark);
 }
 
@@ -139,8 +133,8 @@ b{
 /* ---- ASIDE ---- */
 
 aside {
-  height: 100vh;
-  /* background: gray; */
+    height: 100vh;
+    
 }
 
 aside .top{
@@ -148,6 +142,7 @@ aside .top{
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 1.4rem;
   margin-top: 1.4rem;
 }
 
@@ -162,7 +157,8 @@ aside .logo img{
 
 aside .logo{
   display: flex;
-  gap: 0.2rem;
+  gap: 0.3rem;
+  padding: 1rem;
 }
 
 /* ---- ASIDE SIDEBAR ---- */
@@ -285,17 +281,20 @@ main .insights h3{
 }
 
 
+
  /* ---- RIGHT BAR ---- */
 
  .right {
   margin-top: 1.4rem;
+  position: absolute;
+  right: 150px;
  }
 
  .right .top{
-    display:  flex;
+    display: flex;
     justify-content: end;
+    margin-left: auto;
     gap: 2rem;
-    /* background: gray; */
  }
 
  .right .top button{
@@ -405,10 +404,10 @@ main .testcase-nokia table:hover{
  /* ---- login/register ---- */
 
 main .login-user{
-  margin-top: 2rem;
+  margin-top: 3rem;
   width: 100%;
   text-align: center;
-  width: 382px;  
+  width: 500px;  
   overflow: hidden;  
   margin: auto;  
   margin: 20 0 0 450px;  
@@ -510,157 +509,155 @@ main .label{
       display: none;
   }
 
-
+ }
  /* ---- MEDIA QUERIES Smarthpone ---- */
 
-
-@media screen and (max-width: 768px) {
-    .container{
-      width: 100%;
-      grid-template-columns: 1fr;
-    }
-
-    aside {
-    	position: fixed;
-    	left: -100%;
-    	background: var(--color-white);
-    	width: 18rem;
-    	z-index: 3;
-    	box-shadow: 1rem 3rem 4rem var(--color-light);
-    	height: 100vh;
-    	padding-right: var(--card-padding);
-      display: none;
-      animation: showMenu 400ms ease forwards;
-    }
-
-    @keyframes showMenu{
-      to{
-        left: 0;
-      }
-    }
-
-    aside .logo{
-      margin-left: 1rem;
-    }
-
-    aside .logo h2{
-      display: inline;
-    }
-
-    aside .sidebabr h3{
-      display: inline;
-    }
-
-    aside .sidebar a{
-      width: 100%;
-      height: 3.4rem;
-    }
-
-    aside .sidebar a:last-child{
-      position: absolute;
-      bottom: 5rem;
-    }
-
-    aside .close{
-      display: inline-block;
-      cursor: pointer;
-    }
-
-    main {
-      margin-top: 8rem;
-      padding: 0 1rem;
-    }
-
-    main .testcase-nokia{
-      position: relative;
-      margin: 3rem 0 0 0;
-      width: 100%;
-    }
-
-    main .testcase-nokia table{
-      width: 100%;
-      margin: 0;
-    }
-
-    .right {
-      width: 94%;
-      margin: 0 auto 4rem;
-    }
-
-    .right .top{
-      position: fixed;
-      top: 0;
-      left: 0;
-      align-items: center;
-      padding: 0 0.8rem;
-      height: 4.6rem;
-      background: var(--color-white);
-      width: 100%;
-      margin: 0;
-      z-index: 2;
-      box-shadow: 0 1rem 1rem var(--color-light);
-    }
-
-    .right .top .theme-toggler{
-      width: 4.5rem;
-      position: absolute;
-      left: 50%
-    }
-
-    .right .top button {
-      display: inline-block;
-      background: transparent;
-      cursor: pointer;
-      color: var(--color-dark);
-      position: absolute;
-      left: 1rem;
-    }
-
-    .right .top button span{
-      font-size: 2rem;
-    }
-
- }
-
-
-
- main #container-404{
-  position: absolute;
-  top: 10%;
-  left: 10%;
-  right: 10%;
-  border-radius: 10px;
-  bottom: 10%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-main #container-404 .content-404{
-  max-width: 600px;
-  text-align: center;
-
-}
-
-main #container-404 .content-404 h2{
-  font-size: 18vw;
-  color: var(--color-dark);
-  line-height: 1em;
-}
-
-main #container-404 .content-404 h4{
- position: relative;
- font-size: 1.5em;
- margin-bottom: 20px;
- color: #fff;
- background: black;
- font-weight: 300;
- padding: 10px 20px;
- display: inline-block;
-}
-
-  main #container-404 .content-404 p{
-  color: var(--color-dark);
-  font-size: 1.2em;
+ @media screen and (max-width: 768px) 
+ {
+     .container{
+       width: 100%;
+       grid-template-columns: 1fr;
+     }
+ 
+     aside {
+       position: fixed;
+       left: -100%;
+       background: var(--color-white);
+       width: 18rem;
+       z-index: 3;
+       box-shadow: 1rem 3rem 4rem var(--color-light);
+       height: 100vh;
+       padding-right: 1.8rem;
+       display: none;
+       animation: showMenu 400ms ease forwards;
+     }
+ 
+     @keyframes showMenu{
+       to{
+         left: 0;
+       }
+     }
+ 
+     aside .logo {
+       margin-left: 1rem;
+     }
+ 
+     aside .logo h2{
+       display: inline;
+     }
+ 
+     aside .sidebar h3{
+       display: inline;
+     }
+ 
+     aside .sidebar a{
+       width: 100%;
+       height: 3.4rem;
+     }
+ 
+     aside .sidebar a:last-child{
+       position: absolute;
+       bottom: 5rem;
+     }
+ 
+     aside .close{
+       display: inline-block;
+       cursor: pointer;
+     }
+ 
+     main {
+       margin-top: 8rem;
+       padding: 0 1rem;
+     }
+ 
+     main .test-case{
+       position: relative;
+       margin: 3rem 0 0 0;
+       width: 100%;
+     }
+ 
+     main .test-case table{
+       width: 100%;
+       margin: 0;
+     }
+ 
+     .right{
+       width: 94%;
+       margin: 0 auto 4rem;
+     }
+ 
+     .right .top{
+       position: fixed;
+       top: 0;
+       left: 0;
+       align-items: center;
+       padding: 0 0.8rem;
+       height: 4.6rem;
+       background: var(--color-white);
+       width: 100%;
+       margin: 0;
+       z-index: 2;
+       box-shadow: 0 1rem 1rem var(--color-light);
+     }
+ 
+     .right .top .theme-toggler{
+       width: 4.5rem;
+       position: absolute;
+       left: 50%;
+     }
+ 
+     .right .top button{
+       display: inline-block;
+       background: transparent;
+       cursor: pointer;
+       color: var(--color-dark);
+       position: absolute;
+       left: 1rem;
+     }
+ 
+     .right .top button span{
+       font-size: 2rem;
+     }
+ 
   }
+
+
+/* ScrollBar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--color-primary); 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--color-primary); 
+}
+
+/* Footer */
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 97%;
+  color: var(--color-white);
+  text-align: right;
+}
+
+/* Thick black border */
+hr.line_nokia {
+  border: 1px solid var(--color-dark);
 }
