--- a/webapp/templates/webapp/favoritesTestLine.html
+++ b/webapp/templates/webapp/favoritesTestLine.html
@@ -7,14 +7,18 @@
     </head>
     <body>
         {% block content %}
-            {{ request.user }}'s favorite ids
-            <br>
-            {% for favs in favs_id %}
-                <li class="list-group-item"> {{ forloop.counter }}.
-                    <a href="{% url 'Testrun' favs.id %}">{{ favs.id }}</a>
-                    <a href="{% url 'delete_favorites_TestLine' favs.id %}">Delete</a>
-                </li>
-            {% endfor %}
+        <main>
+            <div class="date">
+                <p>{{ request.user }}'s favorite ids</p>
+            </div>
+                <br>
+                {% for favs in favs_id %}
+                    <li class="list-group-item text-dark"> {{ forloop.counter }}.
+                        <a class="text-dark" href="{% url 'Testrun' favs.id %}">{{ favs.id }}</a>
+                        <a class="text-dark" href="{% url 'delete_favorites_TestLine' favs.id %}">Delete</a>
+                    </li>
+                {% endfor %}
+        </main>
         {% endblock %}
     </body>
 </html>
