--- a/webapp/templates/webapp/login.html
+++ b/webapp/templates/webapp/login.html
@@ -11,7 +11,7 @@
                 <main>
                     <div class="login-user">
                         <span class="material-icons-sharp">account_circle</span>
-                        <h2>Welcome {{ request.user }} </h2></a>
+                        <h2>Welcome to TestStats,  {{ request.user }} </h2>
                     </div>
 
                     <div class="d-flex justify-content-center form_container">
@@ -35,7 +35,11 @@
                             </div>
 
                                 <div class="d-flex justify-content-center mt-3 login_container">
-                                    <input class="btn login_btn" type="submit" value="Log in">
+                                    <input class="btn btn-primary btn-block" class="btn login_btn" type="submit" value="Log in">
+                                </div>
+                                <hr class="line_nokia">
+                                <div class="col col-xs-12 col-md-12 col-lg-12 mt-1 mb-5">
+                                    I do not have an account? <a class="btn btn-primary btn-block" href="{% url 'register' %}">Register</a>
                                 </div>
                         </form>
                     </div>
