--- a/webapp/templates/webapp/userProfile.html
+++ b/webapp/templates/webapp/userProfile.html
@@ -9,6 +9,10 @@
         {% block content %}
             <div class="container">
                 <main>
+                    <div class="date">
+                        <p>Loaded in <span id="loadtime"></span></p>
+                    </div>
+                    
                     <div class="insights">
                         <div class="analyticsetc">
                             <span class="material-icons-sharp">analytics</span>
